Update vim and tmux configs

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,10 +30,18 @@ bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
 
 bind c new-window -c '#{pane_current_path}'
 bind-key C-j choose-tree                                                  # open up a pane to select which session you want to change to
+
 bind-key C-p split-window -h "ipython"                                    # open a new split screen with ipython running
-bind-key C-n split-window -c "#{pane_current_path}" -h "jupyter notebook" # open a new jupyter notebook on a split screen on the same directory
-bind-key C-v split-window -c ~/ -h "vim .vimrc"                           # open a .vimrc on vim on a split screen
-set status-style "bg=#282c34"                                             # change the status bar to match one-dark colorscheme
+bind-key C-n new-window -n 'notebook' -c '#{pane_current_path}' "jupyter notebook" # open a new jupyter notebook on a new window on the same directory
+bind-key C-v new-window -n 'vimrc' "vim .vimrc" # open a .vimrc on vim on new window
+bind-key C-t new-window -n 'tmux conf' "vim .tmux.conf"  # open a .tmux.conf on vim on new window
+set status-style "bg=#000000"                                             # change the status bar to match one-dark colorscheme
+
+bind-key & kill-window
+bind-key x kill-pane
+
+set-option -g allow-rename off
+
 
 # -- display -------------------------------------------------------------------
 
@@ -172,6 +180,32 @@ if '[ -f ~/.tmux.conf.local ]' 'source ~/.tmux.conf.local'
 # -- 8< ------------------------------------------------------------------------
 
 run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
+
+# Tmux Plugin Manager
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+
+# tmux-resurrect - save and reload sessions and windows after a restart
+# Default keybinds : save - command + c + s && restore command + c + r
+
+# https://github.com/tmux-plugins/tmux-resurrect
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+# https://github.com/tmux-plugins/tmux-continuum
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+# Restore last saved enviroment
+set -g @continuum-restore 'on'
+
+# Set autosave interval
+set -g @continuum-save-interval '5'
+
+# https://github.com/tmux-plugins/tmux-urlview
+set -g @plugin 'tmux-plugins/tmux-urlview'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run -b '~/.tmux/plugins/tpm/tpm'
 
 
 # EOF
