Update the tmux config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,4 @@
- # Aarsh Patel's TMUX Configuration
-
-# -- General -------------------------------------------------------------------
+# Aarsh Patel's TMUX Configuration
 set -g default-terminal "screen-256color"
 setw -g xterm-keys on
 set -s escape-time 10                     # faster command sequences
@@ -16,38 +14,25 @@ setw -q -g utf8 on
 # history limit TMUX should keep
 set -g history-limit 10000                 # boost history
 
-# edit configuration
-bind e new-window -n '~/.tmux.conf.local' "sh -c '\${EDITOR:-vim} ~/.tmux.conf.local && tmux source ~/.tmux.conf && tmux display \"~/.tmux.conf sourced\"'"
-
-# reload configuration
 bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
 
 # Create a new window using Prefix (Ctrl+a) and c
-# open on the currenet path
+# open on the current path
 bind c new-window -c '#{pane_current_path}'
 
-# switch between sessons
+# switch between sessions
 bind-key C-j choose-tree
 
-# binding to open up different things
-# open a new split screen with ipython running
-bind-key C-p new-window -c "#{pane_current_path}" -n "ipython" "ipython"
-
-# open a new jupyter notebook on a split screen on the same directory
-bind-key C-n new-window -c "#{pane_current_path}" -n "notebook" 'jupyter notebook'
-
-# open a .vimrc on vim on a split screen
-bind-key C-v split-window -c ~/ -h "vim .vimrc"
+# open a .tmux.conf on vim on a split screen
+bind-key C-v split-window -c ~/ -h "nvim ~/.config/nvim/init.vim"
 
 # open a .tmux.conf on vim on a split screen
-bind-key C-t split-window -c ~/ -h "vim .tmux.conf"
+bind-key C-t split-window -c ~/ -h "nvim ~/.tmux.conf"
 
 # open a .zshrc on vim on a split screen
-bind-key C-z split-window -c ~/ -h "vim .zshrc"
+bind-key C-z split-window -c ~/ -h "nvim ~/.zshrc"
 
 # Swap windows left/right
-# C-S-Left => Control-Shift-Left
-# C-S-Right => Control-Shift-Right
 bind-key -n C-S-Left swap-window -t -1
 bind-key -n C-S-Right swap-window -t +1
 
@@ -79,15 +64,15 @@ set -g visual-activity off
 
 # create session
 # Control-c to create a new session while in Tmux
-# whilile Prefix + c creates a new window
+# while Prefix + c creates a new window
 bind C-c new-session
 
 # split current window horizontally
-bind - split-window -v -c '#{pane_current_path}'
+bind "-" split-window -v -c '#{pane_current_path}'
 # split current window vertically
-bind \ split-window -h -c '#{pane_current_path}'
+bind "\\" split-window -h -c '#{pane_current_path}'
 
-# -- Pane Navigation -------------------------------------------------------------------
+# -- Pane & Window Navigation -------------------------------------------------------------------
 bind -r h select-pane -L  # move left
 bind -r j select-pane -D  # move down
 bind -r k select-pane -U  # move up
@@ -95,33 +80,32 @@ bind -r l select-pane -R  # move right
 bind > swap-pane -D       # swap current pane with the next one
 bind < swap-pane -U       # swap current pane with the previous one
 
-# Convert the pane into a window
-bind-key C-b break-pane -t : # break the pane
-
-# choose the window to join the current window
-bind-key V choose-window 'join-pane -h -s "%%"'
-
 # pane resizing
 bind -r H resize-pane -L 2
 bind -r J resize-pane -D 2
 bind -r K resize-pane -U 2
 bind -r L resize-pane -R 2
 
-# window navigation
-unbind n
-unbind p
-
 # move between windows using Ctrl-h and Ctrl-l (vim keybindings)
 bind -r C-h previous-window # select previous window
 bind -r C-l next-window     # select next window
 bind Tab last-window        # move to last active window
 
-# -- user defined overrides ----------------------------------------------------
-if '[ -f ~/.tmux.conf.local ]' 'source ~/.tmux.conf.local'
+# copy & scrolling in tmux buffers
+set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi V send -X select-line
+bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
+# Break a pane into its own window
+bind-key C-b break-pane -t :
 
-# -- 8< ------------------------------------------------------------------------
-run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
+# Swap windows left/right
+# C-S-Left => Control-Shift-Left
+# C-S-Right => Control-Shift-Right
+bind-key -n C-S-Left swap-window -t -1
+bind-key -n C-S-Right swap-window -t +1
+
 
 # -- Theme -------------------------------------------------------------------
 
@@ -130,13 +114,13 @@ set -g display-panes-colour default
 set -g display-panes-active-colour default
 
 # Navigating Text
-setw -g mode-keys vi
-set-option -g default-command "reattach-to-user-namespace -l bash"
+# setw -g mode-keys vi
+# set-option -g default-command "reattach-to-user-namespace -l bash"
 
 # start selecting text typing 'v' key (once you are in copy mode)
-bind-key -t vi-copy v begin-selection
+# bind-key -t vi-copy v begin-selection
 # copy selected text to the system's clipboard
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+# bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
 # -- Plugins -------------------------------------------------------------------
 set -g @plugin 'tmux-plugins/tpm'
@@ -144,7 +128,11 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-set -g @plugin 'egel/tmux-gruvbox'
+
+# -- Plugin Themes -------------------------------------------------------------------
+#set -g @plugin 'tonylambiris/palenight-tmux'
+#set -g @plugin 'egel/tmux-gruvbox'
+set -g @plugin "arcticicestudio/nord-tmux"
 
 ## Tmux-Continuum
 set -g @continuum-restore 'on' # initialize the tmux plugin
