Update the tmux config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,8 @@
-# Aarsh Patel's TMUX Configuration
+# TMUX Configuration
+# By Aarsh Patel
+# March 2022
+
+# -- General -------------------------------------------------------------------
 set -g default-terminal "screen-256color"
 setw -g xterm-keys on
 set -s escape-time 10                     # faster command sequences
